<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <View
        android:id="@+id/view"
        android:layout_width="178dp"
        android:layout_height="403dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="220dp"
        android:background="#FBE4E4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="340dp"
        android:text="@string/name_user"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView6Information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/info_user"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView5Birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="60dp"
        android:text="@string/birth_user"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/textView7PreReceived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/present_received"
        android:textColor="#020202"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8PreGive"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView6Information" />

    <TextView
        android:id="@+id/textView8PreGive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="25dp"
        android:text="@string/present_give"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView6Information" />

    <TextView
        android:id="@+id/textView9TotalFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="80dp"
        android:text="@string/num_friend"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <TextView
        android:id="@+id/textView4Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/email_user"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.194" />

    <TextView
        android:id="@+id/textView10RecentViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_views"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="266dp"
        tools:layout_editor_absoluteY="49dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/foto_usuario_chat"
        tools:layout_editor_absoluteX="281dp"
        tools:layout_editor_absoluteY="100dp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/foto_usuario_chat"
        tools:layout_editor_absoluteX="281dp"
        tools:layout_editor_absoluteY="227dp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/foto_usuario_chat"
        tools:layout_editor_absoluteX="281dp"
        tools:layout_editor_absoluteY="352dp" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#AC6868"
        android:text="@string/add"
        app:iconTint="#F44336"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>