<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBD7D7"
    tools:context=".WishViewActivity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="1000dp"
        android:layout_height="1000dp"
        android:layout_marginTop="-760dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle" />

    <ImageButton
        android:id="@+id/imageButtonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="#FEBDBD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_btn_2" />

    <ImageButton
        android:id="@+id/imageButtonPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="#FEBDBD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icono_usuario_2" />

    <TextView
        android:id="@+id/tvGiftName"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="270dp"
        android:fontFamily="sans-serif"
        android:text="@string/playstation"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/playst4" />

    <TextView
        android:id="@+id/tvGiftPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/price400"
        android:textColor="#FECD7E"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGiftName" />

    <TextView
        android:id="@+id/tvGiftDescription"
        android:layout_width="332dp"
        android:layout_height="213dp"
        android:layout_marginTop="20dp"
        android:text="@string/wish_desc"
        android:textColor="#7E7A7A"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGiftPrice" />


    <Button
        android:id="@+id/btn_reserve"
        android:layout_width="150dp"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F67070"
        android:fontFamily="sans-serif"
        android:text="@string/reserve"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGiftDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>